# chamber

./: .gitignore  .markdownlint.yml  .typos.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  performance-issue.yml  question.yml
.github/workflows/: benchmark.yml  release.yml
crates/api/: Cargo.toml  README.md
crates/api/src/: auth.rs  error.rs  lib.rs  models.rs  server.rs
crates/api/src/handlers/: auth.rs  health.rs  import_export.rs  items.rs  mod.rs  passwords.rs  vault.rs
crates/api/tests/: auth_tests.rs  health_tests.rs  items_tests.rs  password_tests.rs  vault_tests.rs
crates/api/tests/common/: fixtures.rs  helpers.rs  mod.rs
crates/backup/: Cargo.toml  README.md
crates/backup/benches/: backup_benchmark.rs
crates/backup/src/: lib.rs  manager.rs  service.rs
crates/chamber/: Cargo.toml
crates/chamber/src/: main.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: api.rs  backup.rs  health.rs  lib.rs  stats.rs  utils.rs  vault.rs
crates/import-export/: Cargo.toml  README.md
crates/import-export/benches/: import_export_benchmark.rs
crates/import-export/src/: lib.rs
crates/password-gen/: Cargo.toml  README.md
crates/password-gen/benches/: password_gen_benchmark.rs
crates/password-gen/src/: lib.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: app.rs  lib.rs  ui.rs  vault_selector.rs
crates/vault/: Cargo.toml  README.md
crates/vault/benches/: crypto_benchmark.rs
crates/vault/src/: autolock.rs  autolock_service.rs  config.rs  crypto.rs  db.rs  lib.rs  manager.rs  registry.rs
scripts/: publish_all.py
