[package]
name = "chamber-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "REST API server for Chamber secrets manager"
keywords = ["api", "rest", "server", "secrets", "web"]
categories.workspace = true
readme = "README.md"

[dependencies]
chamber-vault = "0.5.2"
chamber-password-gen = "0.5.2"
chamber-import-export = "0.5.2"
axum = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
color-eyre = {workspace = true}
chrono = {workspace = true}
uuid = {workspace = true}
rand = {workspace = true}
jsonwebtoken = {workspace = true}
tokio = {workspace = true}
tower-http = {workspace = true}
tracing = {workspace = true}
arboard = {workspace = true}
md5 = {workspace = true}

[dev-dependencies]
axum-test = "17.3.0"
serde_json = {workspace = true}
tempfile = {workspace = true}
uuid = {workspace = true}
http = "1.3.1"
time = "0.3.41"
chrono = "0.4.41"