[package]
name = "chamber-backup"
version = "0.5.0"
edition = "2024"
description = "CLI interface for Chamber secrets manager"

[dependencies]
chamber-vault = {workspace = true}
chamber-import-export = {workspace = true}
time = {workspace = true}
serde_json = {workspace = true}
flate2 = {workspace = true}
color-eyre = {workspace = true}

[dev-dependencies]
tempfile = {workspace = true}
criterion = {workspace = true}

[[bench]]
name = "backup_benchmark"
harness = false
