[package]
name = "chamber-backup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Backup functionality for Chamber secrets manager"
keywords = ["backup"]
categories.workspace = true
readme = "README.md"


[dependencies]
chamber-vault = {workspace = true}
chamber-import-export = {workspace = true}
time = {workspace = true}
serde_json = {workspace = true}
flate2 = {workspace = true}
color-eyre = {workspace = true}

[dev-dependencies]
tempfile = {workspace = true}
criterion = {workspace = true}

[[bench]]
name = "backup_benchmark"
harness = false
