[package]
name = "chamber"
version = "0.4.0"
edition = "2024"

[dependencies]
chamber-backup = {workspace = true}
chamber-cli = {workspace = true}
chamber-ui = {workspace = true}
chamber-vault = {workspace = true}
crossterm = {workspace = true}
clap = {workspace = true}
color-eyre = {workspace = true}

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.5"

[[bin]]
name = "chamber"
path = "src/main.rs"