[package]
name = "chamber-tui"
version = "0.5.2"
edition = "2024"
rust-version = "1.85"
authors = ["Mikko Leppänen <mleppan23@gmail.com>"]
license = "MIT"
repository = "https://github.com/mikeleppane/visualvault"
homepage = "https://github.com/mikeleppane/visualvault"
description = "A secure, local-first secrets manager with encrypted storage and zero-knowledge architecture"
keywords = ["password", "manager", "vault", "secrets", "security"]
categories = ["command-line-utilities", "cryptography"]
readme = "../../README.md"


[dependencies]
chamber-backup = {workspace = true}
chamber-secret-manager-cli = {workspace = true}
chamber-ui = {workspace = true}
chamber-vault = {workspace = true}
crossterm = {workspace = true}
clap = {workspace = true}
color-eyre = {workspace = true}
tokio = {workspace = true}

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.5"

[[bin]]
name = "chamber"
path = "src/main.rs"