[package]
name = "chamber-cli"
version = "0.4.0"
edition = "2024"
description = "CLI interface for Chamber secrets manager"

[dependencies]
chamber-vault = { workspace = true }
chamber-import-export = { workspace = true  }
chamber-password-gen = { workspace = true  }
chamber-backup = {workspace = true}
color-eyre = {workspace = true}
clap = { workspace = true }
rpassword = { workspace = true }
time = {workspace = true}
chrono = {workspace = true}
regex = {workspace = true}
arboard = {workspace = true}
serde_json = {workspace = true}
dirs = {workspace = true}
[dev-dependencies]
time = "0.3.41"