[package]
name = "chamber-secret-manager-cli"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI interface for Chamber secrets manager"
keywords = ["cli", "commands", "shell"]
categories.workspace = true
readme = "README.md"


[dependencies]
chamber-vault = "0.5.2"
chamber-import-export = "0.5.2"
chamber-password-gen = "0.5.2"
chamber-backup = "0.5.2"
chamber-api = "0.5.2"
color-eyre = {workspace = true}
clap = { workspace = true }
rpassword = { workspace = true }
time = {workspace = true}
chrono = {workspace = true}
regex = {workspace = true}
arboard = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[dev-dependencies]
time = {workspace = true}