[package]
name = "chamber-secret-manager-cli"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI interface for Chamber secrets manager"
keywords = ["cli", "commands", "shell"]
categories.workspace = true
readme = "README.md"


[dependencies]
chamber-vault = {workspace = true}
chamber-import-export = {workspace = true}
chamber-password-gen = {workspace = true}
chamber-backup = {workspace = true}
chamber-api = {workspace = true}
color-eyre = {workspace = true}
clap = { workspace = true }
rpassword = { workspace = true }
time = {workspace = true}
chrono = {workspace = true}
regex = {workspace = true}
arboard = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[dev-dependencies]
time = {workspace = true}