[package]
name = "chamber-import-export"
version = "0.3.0"
edition = "2024"
description = "Import/export functionality for Chamber secrets manager"

[dependencies]
anyhow = { workspace = true }
chamber-vault = { path = "../vault" }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = {workspace = true}

[[bench]]
name = "import_export_benchmark"
harness = false
