[package]
name = "chamber-import-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Import/export functionality for Chamber secrets manager"
keywords = ["import", "export", "csv", "json"]
categories.workspace = true
readme = "README.md"


[dependencies]
chamber-vault = "0.5.2"
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
color-eyre = {workspace = true}

[dev-dependencies]
criterion = { workspace = true }
tempfile = {workspace = true}

[[bench]]
name = "import_export_benchmark"
harness = false
