[package]
name = "chamber-password-gen"
version = "0.3.0"
edition = "2024"
description = "Password generation utilities for Chamber secrets manager"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }


[[bench]]
name = "password_gen_benchmark"
harness = false
