[package]
name = "chamber-password-gen"
version = "0.4.0"
edition = "2024"
description = "Password generation utilities for Chamber secrets manager"

[dependencies]
rand = { workspace = true }
color-eyre = {workspace = true}

[dev-dependencies]
criterion = { workspace = true }


[[bench]]
name = "password_gen_benchmark"
harness = false
