[package]
name = "chamber-password-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Password generation utilities for Chamber secrets manager"
keywords = ["password", "generator", "security", "random"]
categories.workspace = true
readme = "README.md"


[dependencies]
rand = { workspace = true }
color-eyre = {workspace = true}

[dev-dependencies]
criterion = { workspace = true }


[[bench]]
name = "password_gen_benchmark"
harness = false
