[package]
name = "chamber-ui"
version = "0.5.2"
edition = "2024"
description = "TUI interface for Chamber secrets manager"

[dependencies]
chamber-vault = {workspace = true}
chamber-password-gen = {workspace = true}
chamber-import-export = {workspace = true}
dirs = { workspace = true }
ratatui = { workspace = true }
arboard = { workspace = true }
time = {workspace = true}
tui-textarea = {workspace = true}
color-eyre = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}