[package]
name = "chamber-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TUI interface for Chamber secrets manager"
keywords = ["ui", "tui", "user-interface"]
categories.workspace = true
readme = "README.md"

[dependencies]
chamber-vault = "0.5.2"
chamber-password-gen = "0.5.2"
chamber-import-export = "0.5.2"
dirs = { workspace = true }
ratatui = { workspace = true }
arboard = { workspace = true }
time = {workspace = true}
tui-textarea = {workspace = true}
color-eyre = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}