[package]
name = "chamber-vault"
version = "0.1.0"
edition = "2021"
description = "Core vault functionality for Chamber secrets manager"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }
hmac = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
zeroize = { workspace = true }
dirs = {workspace = true}

[dev-dependencies]
tempfile = "3.20.0"