[package]
name = "chamber-vault"
version = "0.3.0"
edition = "2024"
description = "Core vault functionality for Chamber secrets manager"

[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }
hmac = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
zeroize = { workspace = true }
dirs = {workspace = true}
uuid = {workspace = true}
color-eyre = {workspace = true}

[dev-dependencies]
tempfile = {workspace = true}
criterion = { workspace = true }

[[bench]]
name = "crypto_benchmark"
harness = false
