[package]
name = "chamber-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core vault functionality for Chamber secrets manager"
keywords = ["vault", "encryption", "secrets", "storage"]
categories.workspace = true
readme = "README.md"


[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }
hmac = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
zeroize = { workspace = true }
dirs = {workspace = true}
uuid = {workspace = true}
color-eyre = {workspace = true}
chrono = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
async-trait = {workspace = true}

[dev-dependencies]
tempfile = {workspace = true}
criterion = { workspace = true }

[[bench]]
name = "crypto_benchmark"
harness = false
